# pastebinit

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  auto-merge.yml  auto-rebase.yml  auto-release.yml  build.yml
debian/: changelog  control  copyright  pastebinit.1  pastebinit.bash-completion
docs/superpowers/plans/: 2026-04-29-pastebinit.md
docs/superpowers/specs/: 2026-04-29-pastebinit-design.md
pastebinit/: __main__.py  cli.py  config.py  credentials.py  syntax.py
pastebinit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pastebinit/backends/: __init__.py  base.py  bpa_st.py  dpaste.py  paste_debian_net.py  paste_opendev.py  paste_opensuse.py  paste_ubuntu_com.py  pastebin_com.py  sprunge.py
tests/: conftest.py  test_cli.py  test_config.py  test_credentials.py  test_syntax.py
tests/backends/: test_base.py  test_bpa_st.py  test_dpaste.py  test_paste_debian_net.py  test_paste_opendev.py  test_paste_opensuse.py  test_paste_ubuntu_com.py  test_pastebin_com.py  test_sprunge.py
